--- a/UI/src/app/components/signup/signup.component.html
+++ b/UI/src/app/components/signup/signup.component.html
@@ -1,1 +1,69 @@
-<p>signup works!</p>
+<div class="outer">
+    <div class="container">
+        <div class="row">
+            <div class="offset-md-2 col-lg-5 col-md-7 offset-lg-4 offset-md-3">
+                <div class="panel border bg-white">
+                    <div class="panel-heading">
+                        <h3 class="pt-3 font-weight-bold">Sign Up</h3>
+                    </div>
+                    <div class="panel-body p-3">
+                        <form>
+                            <div class="form-group pt-3">
+                                <div class="input-field">
+                                    <span class="fa fa-user p-2"></span> <input formControlName="firstName" type="text"
+                                        placeholder="First Name"> </div>
+                            </div>
+                            <small
+                               
+                                class="text-danger">*First Name is required*</small>
+                            <div class="form-group pt-3">
+                                <div class="input-field"
+                                   >
+                                    <span class="fa fa-user p-2"></span> <input formControlName="lastName" type="text"
+                                        placeholder="Last Name"> </div>
+                            </div>
+                            <small
+                               
+                                class="text-danger">*Last Name is required*</small>
+                            <div class="form-group pt-3">
+                                <div class="input-field"
+                                    >
+                                    <span class="fa fa-user p-2"></span> <input formControlName="userName" type="text"
+                                        placeholder="User Name"> </div>
+                            </div>
+                            <small
+                               
+                                class="text-danger">*Username is required*</small>
+                            <div class="form-group pt-3">
+                                <div class="input-field"
+                                    >
+                                    <span class="fa fa-user p-2"></span> <input formControlName="email" type="text"
+                                        placeholder="Email"> </div>
+                            </div>
+                            <small 
+                                class="text-danger">*Email is required*</small>
+                            <div class="form-group pt-3">
+                                <div class="input-field"
+                                    >
+                                    <span class="fa fa-lock px-2"></span> <input formControlName="password"
+                                        [type]="type" placeholder="Password"> <button
+                                        type="button" class="bg-white text-muted"> <span (click)="hideShowPass()" class="fa {{eyeIcon}}"></span>
+                                    </button> </div>
+                            </div>
+                            <small
+                                
+                                class="text-danger">*Password is required*</small>
+
+                            <button type="submit" class="btn btn-primary btn-block mt-4 w-100">Signup</button>
+                            <div class="text-center pt-4 text-muted">Already have an account? 
+                                <a id="forgot" routerLink="/login">Login</a> 
+                               
+                            </div>
+                        </form>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
