--- a/UI/src/styles.css
+++ b/UI/src/styles.css
@@ -2,3 +2,5 @@
 
 /* @import url('/ node_modules/bootstrap/dist/css/bootstrap.min.css'); */
 @import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+@import url('assets/css/custom.css');
